Fixed tests for Exasol DB <v8